# housingfairvalue

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  daily-ingest.yml
backend/: pyproject.toml
backend/api/: db.py  main.py
backend/api/routers/: history.py  sensitivity.py
backend/calc/: affordability.py  composite.py  ratios.py  regimes.py
backend/ingest/: fred.py  pipeline.py
backend/tests/: conftest.py  test_api.py  test_calc.py  test_validation_gate.py
db/migrations/: 001_init.sql  002_ingest_tracking.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: index.css  main.tsx
frontend/src/charts/: CompositeHistory.tsx  SensitivityHeatmap.tsx
frontend/src/components/: ErrorBoundary.tsx  KpiStrip.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: History.tsx  Methodology.tsx  Sensitivity.tsx
infra/: DEPLOY.md  api.Dockerfile
