[project]
name = "housingfairvalue"
version = "0.1.0"
description = "National housing fair value calculator — ingestion, calc, API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "fredapi>=0.5.2",
  "pandas>=2.2",
  "numpy>=2.0",
  "scipy>=1.13",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "slowapi>=0.1.9",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
